--- a/Rep3/rtc.conf
+++ b/Rep3/rtc.conf
@@ -5,5 +5,5 @@ logger.log_level: PARANOID
 manager.modules.abs_path_allowed:YES
 #manager.modules.load_path: C:\Python27\Lib\site-packages\OpenRTM_aist\ext\sdo\observer
 manager.modules.load_path: .
-#manager.modules.load_path: /usr/lib/python2.7/dist-packages/OpenRTM_aist/ext/sdo/observer 
+manager.modules.load_path: /usr/lib/python2.7/dist-packages/OpenRTM_aist/ext/sdo/observer 
 manager.modules.preload: ComponentObserverConsumer
