--- a/Rep2/rtc.conf
+++ b/Rep2/rtc.conf
@@ -1,7 +1,7 @@
 corba.nameservers: localhost
 naming.formats: Rep2.rtc
 logger.enable: NO
-logger.log_level: PARANOID
+logger.log_level: VERBOSE
 manager.modules.abs_path_allowed:YES
 #manager.modules.load_path: C:\Python27\Lib\site-packages\OpenRTM_aist\ext\sdo\observer
 manager.modules.load_path: /usr/lib/python2.7/dist-packages/OpenRTM_aist/ext/sdo/observer 
