--- a/Rep3/rtc.conf
+++ b/Rep3/rtc.conf
@@ -1,8 +1,8 @@
 corba.nameservers: localhost
 naming.formats: Rep3.rtc
 logger.enable: NO
-logger.log_level: PARANOID
-manager.modules.abs_path_allowed:YES
-#manager.modules.load_path: C:\Python27\Lib\site-packages\OpenRTM_aist\ext\sdo\observer
-manager.modules.load_path: /usr/lib/python2.7/dist-packages/OpenRTM_aist/ext/sdo/observer 
+logger.log_level: VERBOSE
+#logger.file_name: rtc%p.log,    STDOUT
+#manager.naming_formats: %n.mgr
+manager.modules.load_path:.
 manager.modules.preload: ComponentObserverConsumer
